--- a/app/src/main/res/layout/main_game_layout.xml
+++ b/app/src/main/res/layout/main_game_layout.xml
@@ -7,25 +7,38 @@
     android:background="@drawable/woodentable"
     tools:context=".MainGameActivity">
 
-    <TextView
-        android:id="@+id/title_game"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/germania_one"
-        android:lineSpacingExtra="0sp"
-        android:text="TEST"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        android:textSize="36sp" />
-
     <RelativeLayout
         android:id="@+id/realtivelayout_game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
+
+        <TextView
+            android:id="@+id/title_announcement"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/germania_one"
+            android:gravity="fill_horizontal"
+            android:paddingStart="10dp"
+            android:paddingTop="10dp"
+            android:text="@string/announcementMade"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/announcement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title_announcement"
+            android:layout_gravity="center_horizontal|fill_horizontal"
+            android:fontFamily="sans-serif-condensed"
+            android:gravity="fill_horizontal"
+            android:paddingBottom="10dp"
+            android:text="@string/noChoice"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="24sp" />
 
         <TableLayout
             android:id="@+id/table"
@@ -34,6 +47,12 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:stretchColumns="1">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
@@ -163,7 +182,7 @@
         </TableLayout>
 
         <Button
-            android:id="@+id/testButton"
+            android:id="@+id/chooseGame"
             style="?android:borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -171,7 +190,7 @@
             android:layout_centerHorizontal="true"
             android:background="@android:color/holo_green_dark"
             android:fontFamily="@font/germania_one"
-            android:text="Test Button"
+            android:text="@string/announcement"
             android:textColor="@android:color/black"
             android:textSize="24sp" />
 
