--- a/app/src/main/res/layout/cardcapture.xml
+++ b/app/src/main/res/layout/cardcapture.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/woodentable">
+    android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/camera_preview"
+        android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/button_capture"
-        android:layout_alignParentTop="true">
-
+        android:layout_height="match_parent">
     </FrameLayout>
 
-    <Button
-        android:id="@+id/button_capture"
-        style="?android:borderlessButtonStyle"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:background="@android:color/holo_green_dark"
-        android:fontFamily="@font/germania_one"
-        android:text="@string/announcement"
-        android:textColor="@android:color/black"
-        android:textSize="24sp" />
+        android:background="@drawable/woodentable"
+        android:layout_alignParentBottom="true">
 
-    <TextView
-        android:id="@+id/capture_log"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/button_capture"
-        android:text="TextView" />
+        <Button
+            android:id="@+id/capture"
+            style="?android:borderlessButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@android:color/holo_green_dark"
+            android:fontFamily="@font/germania_one"
+            android:text="@string/capture"
+            android:textColor="@android:color/black"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/capture_log"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:layout_alignParentBottom="false"
+            android:layout_below="@+id/capture" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
