--- a/app/src/main/res/layout/cardcapture.xml
+++ b/app/src/main/res/layout/cardcapture.xml
@@ -6,37 +6,32 @@
 
     <FrameLayout
         android:id="@+id/cameraPreview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true">
     </FrameLayout>
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/capture_log"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_above="@id/capture"
+        android:background="@drawable/woodentable"
+        android:text="@string/app_name"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/capture"
+        style="?android:borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/woodentable"
-        android:layout_alignParentBottom="true">
-
-        <Button
-            android:id="@+id/capture"
-            style="?android:borderlessButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:background="@android:color/holo_green_dark"
-            android:fontFamily="@font/germania_one"
-            android:text="@string/capture"
-            android:textColor="@android:color/black"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/capture_log"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:layout_alignParentBottom="false"
-            android:layout_below="@+id/capture" />
-
-    </RelativeLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@android:color/holo_green_dark"
+        android:fontFamily="@font/germania_one"
+        android:text="@string/capture"
+        android:textColor="@android:color/black"
+        android:textSize="24sp" />
 
 </RelativeLayout>
