- Cleaned up code - Added comments for better documentation

--- a/app/src/main/res/layout/cardcapture.xml
+++ b/app/src/main/res/layout/cardcapture.xml
@@ -27,9 +27,9 @@
         style="?android:borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/capture"
+        android:layout_above="@+id/cameraPreview"
         android:layout_alignParentEnd="false"
-        android:layout_alignParentBottom="false"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@android:color/holo_green_dark"
         android:fontFamily="@font/germania_one"
@@ -39,13 +39,13 @@
 
     <Button
         android:id="@+id/capture"
-        style="?android:borderlessButtonStyle"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/cameraPreview"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/capture_done"
+        android:layout_alignParentBottom="false"
         android:layout_centerHorizontal="true"
-        android:background="@android:color/holo_green_dark"
+        android:background="@color/colorPrimary"
         android:fontFamily="@font/germania_one"
         android:text="@string/capture"
         android:textColor="@android:color/black"
